RESOLVED FIXED280058
getDisplayMedia video track getSettings() is not returning correct results until getting the first video frame
https://bugs.webkit.org/show_bug.cgi?id=280058
Summary getDisplayMedia video track getSettings() is not returning correct results un...
youenn fablet
Reported 2024-09-20 06:08:51 PDT
getDisplayMedia video track getSettings() is not returning correct results until getting the first video frame
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-20 06:09:06 PDT
EWS
Comment 2 2024-09-23 08:27:42 PDT
Committed 284080@main (0a9bdfd79fa7): <https://commits.webkit.org/284080@main> Reviewed commits have been landed. Closing PR #33975 and removing active labels.
youenn fablet
Comment 3 2024-10-18 04:33:12 PDT
*** Bug 281737 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.